[project]
name = "claude-agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.20",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.14.0",
]
