[project]
name = "qstorm-eda-agent"
version = "2.0.0"
description = "Q-Storm EDA Distribution Analyzer - 確率分布分析ダッシュボード"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core (Streamlit版 - APIキー不要)
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
# FastAPI版 (Claude Agent SDK使用 - APIキー必要)
api = [
    "claude-agent-sdk>=0.1.20",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.23.0",
]
